# meteora_raydium_txn_indexer

./: .env  .gitignore  Cargo.toml  README.md  add_wallet.sh  errors.txt
.sqlx/: query-40d8b6fbe8bcacb3f975153d54d99ff1d31716441bc6804a6af3fae1100f9fd7.json  query-48c9ae0cc253b08b3a5bf79d327e0285a34b7ca6a9c861ae35e1ce9c160fe525.json  query-5c74605eec3acd09c2cc86ef7a08e181e7a7e4e3f853f18209e21ef31d0089b1.json  query-627d8e6b96707f4954535d91df0547f56fabcc5b5fdfa3c7a456c677b9efd15f.json  query-75d3b617fb2a9682ef0f091158a26aac4b375d65fc4fd146be00bf92d823e0b8.json  query-780ed11ab462f1b4a75beba9ce21f604e7ee764f3bdef873e6fdf07fa20d7c04.json  query-a7fd15169abfc18d9820d1badbaad7f6708d83748464ae77b298a2b5e34ecbaa.json  query-b1de7437db715ac60d0a3b249b9962348260f3193651660a42c0cd83263076e4.json  query-b6630a83004bd4ef252e9561b52de904135521c242b0f9feb922a89d8606b5ed.json  query-cedb844b0ad7fa5ea0ec158ad5d55e3595be52f60497f68f5d742cf0e44d2043.json  query-e479576a860a843b1bcf5679b61a545b953399968de789abc1d0fa9a18e5551b.json  query-e77f65b7058e8df24ac4ea8851b71c6e44831a0996b50d82b118d39063f2a7ae.json
migrations/: 20251124090733_create_user_actions.sql  20251124175649_change_token_prices_to_double.sql  20251127203313_add_decimals_to_user_actions.sql  20251128120404_copy_trading.sql  20251201163342_chage_amount_types.sql  20251201181738_activities.sql  20251201182442_add_activities_decimals.sql  20251201183259_added_total_types.sql  20251203105003_remove_action_activity.sql  20251209063048_add_numeric_copy.sql  20251212190801_crete_user_and_copy_trade_tables.sql  (+6 more)
src/: constants.rs  (+5 more)
(+28 files in other folders)
