[package]
name = "met_ray_indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
bs58 = "0.5.1"
chrono = {version = "0.4.42", features = ["serde", "clock"]}
dotenv = "0.15.0"
futures-util = "0.3.31"
helius-laserstream = "0.1.4"
serde = "1.0.228"
serde_json = "1.0.145"
sqlx = {version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "uuid",
    "chrono",
    "bigdecimal",
    "tls-rustls"
]}
tokio = { version = "1.48.0", features = ["macros"] }
reqwest = { version = "0.12", features = ["json"] }
axum = "0.8.7"
bytemuck = "1.24.0"
tokio-tungstenite = "0.21"
tungstenite = "0.21"
bigdecimal = "0.4.9"
spl-token = "9.0.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
rand = "0.9.2"
solana-client = "3.1.4"
solana-sdk = "3.0.0"
solana-transaction-status = "3.1.4"
